# servergame

./: Makefile  README.md  example_test.py  main_database.db  pyproject.toml
admin/: __main__.py
admin/UI/: admin_ui.py  admin_ui.ui
admin/core/: admin_core.py  admin_mapping.py
general/: decorators.py  enums.py
server/: Server_socket.py  __main__.py
server/core/: server_core.py
server/endpoints/: mapping.py  utils.py
